# product-radar-app

./: .cursorrules  .env.example  .gitignore  README.md  config.yaml  instructions.md  memory.json  pyproject.toml
.github/workflows/: daily-radar.yml
docs/: GITHUB_SECRETS.md
reports/: 2026-03-29-viable.csv  2026-03-29.md  2026-03-30-viable.csv  2026-03-30.md  2026-03-31-viable.csv  2026-03-31.md  2026-04-01-viable.csv  2026-04-01.md  2026-04-02-viable.csv  2026-04-02.md  2026-04-03-viable.csv  2026-04-03.md  2026-04-04-viable.csv  2026-04-04.md  2026-04-07-viable.csv  2026-04-07.md  2026-04-09-viable.csv  2026-04-09.md  2026-04-10-viable.csv  2026-04-10.md  2026-04-11-viable.csv  2026-04-11.md  2026-04-16-viable.csv  2026-04-16.md  2026-04-19-viable.csv  2026-04-19.md  2026-04-20-viable.csv  2026-04-20.md  2026-04-22-viable.csv  2026-04-22.md  2026-04-23-viable.csv  2026-04-23.md  2026-04-25-viable.csv  2026-04-25.md  2026-04-27-viable.csv  2026-04-27.md  2026-04-28-viable.csv  2026-04-28.md  2026-04-30-viable.csv  2026-04-30.md  (+110 more)
src/: __init__.py  config.py  git_ops.py  main.py  models.py  scheduler.py
src/analyzers/: competition.py  demand.py  margin.py  viability.py
src/reporters/: console.py  csv_export.py  daily_report.py  notion_register.py
src/scrapers/: aliexpress.py  amazon_es.py  google_trends.py  http_utils.py  temu.py
src/storage/: database.py  memory.py
tests/: test_build_analysis.py  test_margin.py  test_viability.py
